editor-components/stats/stats32/stats32.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    .max-content {
        .content-wrapper {
            display: grid;
            grid-template-columns: repeat(2, 1fr);
            align-items: stretch;
            gap: var(--composer-gap-xl);
            width: 100%;

            &.no-media {
                grid-template-columns: 1fr;
            }

            &.no-text {
                grid-template-columns: 1fr;

                .media-container {
                    min-height: 600px;
                }
            }

            &:not(.no-media) {

                .title,
                .subtitle,
                .description {
                    text-align: left;
                    align-self: flex-start;
                    margin-left: 0;
                    margin-right: auto;
                }

                .text-card {
                    align-items: flex-start;
                }

                .button-container {
                    align-self: flex-start;
                }

                .stats-grid {
                    justify-content: start;
                }

                .stat-item {
                    text-align: left;
                    align-items: flex-start;

                    .stat-title,
                    .stat-subtitle,
                    .stat-description {
                        text-align: left;
                        align-self: flex-start;
                        margin-left: 0;
                        margin-right: auto;
                    }
                }
            }
        }

        .description {
            color: var(--composer-font-color-primary);
        }

        .text-card {
            display: flex;
            flex-direction: column;
            justify-content: center;
            gap: var(--composer-gap-md);

            .button-container {
                display: flex;
                flex-wrap: wrap;
                gap: var(--composer-gap-sm);
                width: 100%;

                .button-wrapper {
                    content: "";

                    .button {
                        content: "";

                        .button-text {
                            content: "";
                        }
                    }
                }
            }

            .stats-grid {
                display: grid;
                grid-template-columns: repeat(2, 1fr);
                gap: var(--composer-gap-xl);
                margin-top: var(--composer-gap-md);
            }

            .stat-item {
                font-size: 1.5rem;
                display: flex;
                flex-direction: column;
                color: var(--composer-font-color-primary);

                .stat-value-container {
                    color: var(--composer-primary-color);
                    display: flex;
                    align-items: baseline;
                    gap: var(--composer-gap-sm);
                    margin: 0;

                    .stat-value {
                        font-size: 5rem;
                        line-height: 1;
                    }

                    .stat-prefix,
                    .stat-suffix {
                        font-size: 5rem;
                        line-height: 1;
                    }
                }

                .stat-title {
                    color: inherit;
                    font-size: 1.3rem;
                }

                .stat-subtitle {
                    font-size: 1rem;
                }


                .stat-description {
                    opacity: 0.7;
                    color: inherit;
                }
            }
        }

        .media-container {
            position: relative;
            width: 100%;
            min-height: 500px;
            background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
            overflow: hidden;
            border-radius: var(--composer-border-radius-sm);

            .overlay {
                position: absolute;
                inset: 0;
                background-color: var(--composer-overlay-color);
                z-index: 1;
            }

            .media {
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                object-fit: cover;
                z-index: 0;
            }
        }
    }
}


@container (max-width: #{$composer-tablet-width}) {
    .container {
        padding-top: 0 !important;
        padding: 80px 40px !important;
    }

    .content-wrapper {
        gap: var(--composer-gap-xl);

        .text-card {

            .stats-grid {
                gap: var(--composer-gap-sm);
            }

            .stat-item {
                .stat-value-container {

                    .stat-value,
                    .stat-prefix,
                    .stat-suffix {
                        font-size: 5rem;
                    }
                }
            }
        }
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container .max-content {
        padding: 0;
        margin-top: 0;

        .content-wrapper {
            grid-template-columns: 1fr;
            gap: var(--composer-gap-xl);
            max-width: 100%;

            .media-container {
                order: 2;
                min-height: 400px;
            }

            .text-card {
                gap: var(--composer-gap-sm);

                .title,
                .description {
                    margin: 0;
                }

                order: 1;
                align-items: flex-start;

                .text-container {
                    padding: 0;
                    gap: var(--composer-gap-md);
                }

                .stats-grid {
                    grid-template-columns: 1fr;
                    gap: var(--composer-gap-lg);
                    align-items: flex-start;
                }

                .stat-item {
                    .stat-value-container {

                        .stat-value,
                        .stat-prefix,
                        .stat-suffix {
                            font-size: 5rem;
                        }
                    }
                }
            }
        }
    }
}

